<resources>
    <string name="app_name">GreenHouse</string>
    <string name="scan_results">Scan the qr code next to each tree or plant to learn about the local wildlife</string>
    <string name="scan">SCAN</string>
    <string name="botanic">START</string>
    <string name="title">over the garden wall</string>
    <string name="imagemenu">fern image</string>
    <string name="read">read</string>
    <string name="stop">stop</string>


    <string name="daisyday">Bellis perennis or daisy it is a perennial herbaceous plant with short creeping rhizomes and rosettes of small rounded or spoon-shaped leaves that are from 2 to 5 centimeters long and grow flat to the ground.
        The species habitually colonises lawns, and is difficult to eradicate by mowing – hence the term lawn daisy.
        We can find numerous insects highlighting the importance of the bee. We can also find butterflies, ants and grasshoppers.</string>

    <string name="daisynight">Bellis perennis or daisy it is a perennial herbaceous plant with short creeping rhizomes and rosettes of small rounded or spoon-shaped leaves that are from 2 to 5 centimeters long and grow flat to the ground.
        The species habitually colonises lawns, and is difficult to eradicate by mowing – hence the term lawn daisy.
        At night the principal wildlife we can find nearby are crickets and cicadas. We can also find spiders and some worms.</string>

    <string name="acaciaday">Vachellia tortilis, widely known as Acacia tortilis is the umbrella to the savanna and Sahel of Africa.
        The pods and foliage, which grow prolifically on the tree, are used as fodder for elephants. Each elephant needs to eat more than two hundred kilos of vegetables a day, including branches, leaves and roots.
        Also, the umbrella-shaped structure serves the local fauna as a refuge from high temperatures. Around these trees we can often find buffaloes, zebras or wildebeests.</string>

    <string name="acacianight">Vachellia tortilis, widely known as Acacia tortilis is the umbrella to the savanna and Sahel of Africa.
        At night it serves as a shelter for numerous animals such as the African owl, frogs and insects particularly if there is a water source close, and other mammals such as chimpanzees. </string>

    <string name="pineday">Pine trees are evergreen, coniferous resinous trees growing 3 to 80 meters tall, with the majority of species reaching 15 to 45 meters tall.
        It is common to see the eurasian bullfinch, which is a small passerine bird, that feeds on cone seeds. We can also find squirrels and woodpeckers.</string>

    <string name="pinenight">Pine trees are evergreen, coniferous resinous trees growing 3 to 80 meters tall, with the majority of species reaching 15 to 45 meters tall.
        Overnight, it appears the great horned owl (Bubo virginianus), also known as the tiger owl.
        It is an extremely adaptable bird with a vast range and is the most widely distributed true owl in the Americas.</string>

</resources>
